# imgui-rs-template

./: Cargo.toml  LICENSE-MIT  README.md
imgui-examples/: Cargo.toml
libs/app/: Cargo.toml
libs/app/src/: lib.rs
libs/imgui-gfx-renderer/: Cargo.toml
libs/imgui-support-gfx/: Cargo.toml
libs/imgui-support-gfx/src/: lib.rs
libs/imgui-winit-support/: Cargo.toml
src/: main.rs
src/support_gfx/: mod.rs
