[package]
name = "imgui-examples"
version = "0.0.23-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
app = { path = "./libs/app" }
gfx = "0.17"
gfx_window_glutin = "0.28"
glutin = "0.19"
imgui = "0.0.22"
imgui-gfx-renderer = { version = "0.0.23-pre", path = "./libs/imgui-gfx-renderer" }
imgui-winit-support = { version = "0.0.23-pre", path = "./libs/imgui-winit-support" }
