[package]
name = "imgui-examples"
version = "0.0.23-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
app = { path = "./libs/app" }
imgui-support-gfx = { path = "./libs/imgui-support-gfx" }
