[package]
name = "imgui-support-gfx"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2018"

[dependencies]
gfx = "0.17"
gfx_window_glutin = "0.28"
glutin = "0.19"
imgui = "0.0.22"
imgui-gfx-renderer = { version = "0.0.23-pre", path = "../imgui-gfx-renderer" }
imgui-winit-support = { version = "0.0.23-pre", path = "../imgui-winit-support" }
